fixed styling and spacing  on profile page

--- a/app/assets/stylesheets/profile/profilepage.css
+++ b/app/assets/stylesheets/profile/profilepage.css
@@ -4,11 +4,20 @@
     display: flex;
     flex-direction: row;
     /* align-items: center; */
+    justify-content: center;
     min-height: 95vh;
+    width: 100vw;
+}
+
+.profile-page-centered {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+    justify-content: center;
 }
 
 .profile-page-body {
-    margin-left: 12vw;
+    /* margin-left: 12vw; */
     width: 54vw;
     max-width: 820px;
     display: block;
